add github/remove stub email

--- a/_config.yml
+++ b/_config.yml
@@ -36,8 +36,8 @@ disqus:
 #twitter: mytwitter
 #instagram: myinstagram
 #linkedin: mylinkedin
-#github: minorllama
-email: myemail@gmail.com
+github: minorllama
+#email: myemail@gmail.com
 
 authors:
   johndoe:
