--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # main text of home
-title: S.
+title: Sita G.
 bio: PhD Candidate at California Institute of Technology
 # twitter summary info
 # description: A blog about technology and stuff related
@@ -37,7 +37,7 @@ disqus:
 #instagram: myinstagram
 #linkedin: mylinkedin
 github: minorllama
-#email: myemail@gmail.com
+email: sgakkhar@caltech.edu
 
 authors:
   johndoe:
